--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,22 +9,22 @@ events {
     }
 
 http {
-    include /opt/nginx/conf/mime.types;
+    include /etc/nginx/mime.types;
     default_type application/octet-stream;
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" /
-	$status $bytes_sent "$http_referer" "$http_user_agent" "$gzip_ratio"';
     access_log /var/log/nginx/access.log main;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" /
+    $status $bytes_sent "$http_referer" "$http_user_agent" "$gzip_ratio"';
     sendfile on;
     keepalive_timeout 65;
 	
 # As requisições HTTP som redirecionadas para HTTPS
  
-	server {
-    server_name ejemplo.com.br www.ejemplo.com.br;
-    listen 80;
-    location / {
-        return 301 https://$server_name$request_uri;
-			}
+    server {
+    	server_name ejemplo.com.br www.ejemplo.com.br;
+    	listen 80;
+    	location / {
+        	return 301 https://$server_name$request_uri;
+		}
 	}
 	
 # O servidor web escuta na porta 443 de trafego seguro
@@ -34,8 +34,8 @@ http {
 		ssl         on;
   
 # Certificados SSL gerados no script
-        ssl_certificate      ssl/ejemplo.crt;
-        ssl_certificate_key  ssl/ejemplo.key;
+        	ssl_certificate      ssl/ejemplo.crt;
+        	ssl_certificate_key  ssl/ejemplo.key;
 
 # Arquivos de log
 		access_log      /var/log/nginx/ssl-access.log;
@@ -43,18 +43,18 @@ http {
 # Diferentes configuracoes SSL podem ser especificadas 
 # dependiendo das necesidades da aplicacao
 
-        ssl_protocols	SSLv3 TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers		RC4:HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
-        ssl_session_cache    shared:SSL:10m;
-        ssl_session_timeout  10m;
+	        ssl_protocols	SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+	        ssl_ciphers		RC4:HIGH:!aNULL:!MD5;
+	        ssl_prefer_server_ciphers on;
+	        ssl_session_cache    shared:SSL:10m;
+	        ssl_session_timeout  10m;
 
 # Proxy reverso que envia o conteudo para o Tomcat		
 		location / {
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass https://localhost:8080;
+		        proxy_set_header X-Forwarded-Host $host;
+		        proxy_set_header X-Real-IP  $remote_addr;
+		        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		        proxy_pass	 https://127.0.0.1:8080/;
 		}
 	}
 }
