--- a/config/ejemplo.com.br.conf
+++ b/config/ejemplo.com.br.conf
@@ -1,24 +1,6 @@
-user nginx;
-worker_processes  1;
-error_log /var/log/nginx_error.log;
+# Configuracao para o site www.ejemplo.com.br
 
-pid  /var/run/nginx.pid;
-
-events {
-    worker_connections  1024;
-    }
-
-http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    access_log /var/log/nginx/access.log main;
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" /
-    $status $bytes_sent "$http_referer" "$http_user_agent" "$gzip_ratio"';
-    sendfile on;
-    keepalive_timeout 65;
-	
 # As requisições HTTP som redirecionadas para HTTPS
- 
     server {
     	server_name ejemplo.com.br www.ejemplo.com.br;
     	listen 80;
@@ -57,4 +39,3 @@ http {
 		        proxy_pass	 https://127.0.0.1:8080/;
 		}
 	}
-}
